style.css
body {
	margin: 0;
	font-family: arial, sans-serif;
	background-color: white;
	color: #668;
}

nav {
	display: inline-block;
}

nav a {
	text-decoration: none;
	color: gray;
	font-size: 14px;
	padding: 0 25px;
}

.navbar-default {
  border: none;
}

header {
	position: relative;
	text-align: center;
	height: 700px;
	background-color: #667;
}

header h1 {
	color: white;
	text-align: center;
	padding-top: 90px;
	text-shadow: 2px 2px black;
	font-weight: 700;
}

header p {
	color: white;
	text-align: center;
	padding-top: 10px;
	font-weight: bold;
	font-size: medium; 
	text-shadow: 2px 2px black;

}

.divider {
	border-bottom: 1px solid;
	width: 500px;
	margin: 20px auto;
	color: white;
	padding-bottom: 10px;
}

.spacer {
	padding-bottom: 20px;
}
.container {
	font-size: 14px;
	font-weight: 500;
}
.container h2 {
	font-weight: bold;

}

.box {
	background-color: white;
	padding-top: 20px;
} 
.box h2 {
	font-weight: bold;
}

.first, .second, .third {
	padding: 20px;
	border-bottom: 2px solid #F8F8F8;
}

#services {
	background-color: #D3D3D3;
	padding-top: 20px;
	padding-bottom: 20px;

}
#services img {
	margin-left: 61px;
}

.line {
	border-bottom: 2px solid #606060;
	width: 300px;
	padding-top: 5px;
	padding-bottom: 10px;
}

#list {
	padding-top: 20px;
}

#map {
	width: 100%;
	height: 300px;
	background-color: #2e2e1f;
	color: white;
	padding-top: 20px;
}
#map img {
	float: right;
}

#map-text {
	text-align: left;
	float: right;
}

footer {
	background-color: white;
	color: #2e2e1f;
	text-align: center;
	font-size: x-small;
	padding-top: 20px;
}

